--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
-  "name": "restful-api",
-  "version": "1.0.0",
-  "description": "Gerenciamento Alunos TDAS - T2",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/rrowdas/RESTful_alunos_tads.git"
-  },
-  "keywords": [
-    "api",
-    "node",
-    "restful"
-  ],
-  "author": "Roger Daniel Rôdas && Vitor Koji Oshiro Shinohara",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/rrowdas/RESTful_alunos_tads/issues"
-  },
-  "homepage": "https://github.com/rrowdas/RESTful_alunos_tads#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+    "name": "restful-api",
+    "version": "1.0.0",
+    "description": "Gerenciamento Alunos TDAS - T2",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/rrowdas/RESTful_alunos_tads.git"
+    },
+    "keywords": [
+        "api",
+        "node",
+        "restful"
+    ],
+    "author": "Roger Daniel Rôdas && Vitor Koji Oshiro Shinohara",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/rrowdas/RESTful_alunos_tads/issues"
+    },
+    "homepage": "https://github.com/rrowdas/RESTful_alunos_tads#readme",
+    "dependencies": {
+        "express": "^4.17.1"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.6"
+    }
 }
