--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     },
     "homepage": "https://github.com/rrowdas/RESTful_alunos_tads#readme",
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "sqlite3": "^5.0.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.6"
