morgan module pra ver as req com nodemon

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "sqlite3": "^5.0.0"
     },
     "devDependencies": {
+        "morgan": "^1.10.0",
         "nodemon": "^2.0.6"
     }
 }
